--- a/upload/admin/view/data/en-gb/localisation/return_status.json
+++ b/upload/admin/view/data/en-gb/localisation/return_status.json
@@ -1,1 +1,1 @@
-[{"return_status_id":"2","language_id":"1","name":"Awaiting Products"},{"return_status_id":"3","language_id":"1","name":"Complete"},{"return_status_id":"1","language_id":"1","name":"Pending"}]
+{"2":{"return_status_id":"2","language_id":"1","name":"Awaiting Products"},"3":{"return_status_id":"3","language_id":"1","name":"Complete"},"1":{"return_status_id":"1","language_id":"1","name":"Pending"}}
