--- a/upload/admin/view/data/localisation/tax_class.json
+++ b/upload/admin/view/data/localisation/tax_class.json
@@ -1,1 +1,12 @@
-[{"tax_class_id":"10","title":"Downloadable Products","description":"Downloadable"},{"tax_class_id":"9","title":"Taxable Goods","description":"Taxed goods"}]
+[
+  {
+    "tax_class_id": "10",
+    "title": "Downloadable Products",
+    "description": "Downloadable"
+  },
+  {
+    "tax_class_id": "9",
+    "title": "Taxable Goods",
+    "description": "Taxed goods"
+  }
+]
